[gd_scene load_steps=2 format=3 uid="uid://5k8l2kkie7v7"]

[ext_resource type="Script" path="res://addons/gov_plugin/proj_info_container.gd" id="1_i00fe"]

[node name="PanelContainer" type="PanelContainer"]
offset_right = 370.0
offset_bottom = 201.0
size_flags_horizontal = 3
script = ExtResource("1_i00fe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ProjLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Proj. Name"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Has SG?"
horizontal_alignment = 2

[node name="HasSgLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Y/N"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Last Edit"
horizontal_alignment = 2

[node name="SgLastEdit" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Y/N"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Since Edit
"
horizontal_alignment = 2

[node name="SgSinceEdit" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Y/N"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Has Noded?"
horizontal_alignment = 2

[node name="NodedHas" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Y/N"
horizontal_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Last Edit"
horizontal_alignment = 2

[node name="NodedLastEdit" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Y/N"
horizontal_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = "Since Edit"
horizontal_alignment = 2

[node name="NodedSinceEdit" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Y/N"
horizontal_alignment = 1
